[gd_scene load_steps=5 format=3 uid="uid://mainmenu123"]

[ext_resource type="Script" path="res://scripts/ui/character_select_ui.gd" id="1_script"]
[ext_resource type="Resource" path="res://resources/characters/type_o.tres" id="2_type_o"]
[ext_resource type="Resource" path="res://resources/characters/type_g.tres" id="3_type_g"]
[ext_resource type="Resource" path="res://resources/characters/type_c.tres" id="4_type_c"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")
characters = Array[Resource]([ExtResource("2_type_o"), ExtResource("3_type_g"), ExtResource("4_type_c")])

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Select AI Character"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="BtnTypeO" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Type O"

[node name="BtnTypeG" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Type G"

[node name="BtnTypeC" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Type C"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="StartStandard" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start Standard (Free)"

[node name="StartPro" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start Pro (Pay $)"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ResetMemory" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Red Pill (Reset Memory)"
modulate = Color(1, 0.4, 0.4, 1)

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "WARNING"
initial_position = 2
size = Vector2i(400, 100)
ok_button_text = "DELETE MEMORY"
dialog_text = "Are you sure? I will forget everything we learned together..."

[node name="DebugPanel" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="CenterContainer/VBoxContainer/DebugPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/DebugPanel/HBox"]
layout_mode = 2
text = "Debug:"

[node name="WorldSpin" type="SpinBox" parent="CenterContainer/VBoxContainer/DebugPanel/HBox"]
layout_mode = 2
min_value = 1.0
max_value = 5.0
value = 1.0
prefix = "W-"

[node name="StageSpin" type="SpinBox" parent="CenterContainer/VBoxContainer/DebugPanel/HBox"]
layout_mode = 2
min_value = 1.0
max_value = 7.0
value = 1.0
prefix = "S-"

[node name="DebugStart" type="Button" parent="CenterContainer/VBoxContainer/DebugPanel/HBox"]
layout_mode = 2
text = "GO"


[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/BtnTypeO" to="." method="_on_char_button_pressed" binds= [0]]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/BtnTypeG" to="." method="_on_char_button_pressed" binds= [1]]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/BtnTypeC" to="." method="_on_char_button_pressed" binds= [2]]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartStandard" to="." method="_on_start_standard_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartPro" to="." method="_on_start_pro_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResetMemory" to="." method="_on_reset_memory_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/DebugPanel/HBox/DebugStart" to="." method="_on_debug_start_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_reset_confirmed"]
